[gd_scene load_steps=5 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://addons/gamejolt_api/gjapi.gd" type="Script" id=2]
[ext_resource path="res://addons/gamejolt_api/gj_icon.png" type="Texture" id=3]
[ext_resource path="res://comms_indicator.tscn" type="PackedScene" id=4]

[node name="Node" type="Node"]

script/script = ExtResource( 1 )

[node name="gjapi" type="HTTPRequest" parent="."]

use_threads = false
body_size_limit = -1
max_redirects = 8
script/script = ExtResource( 2 )
__meta__ = { "_editor_icon":ExtResource( 3 ) }
private_key = null
game_id = null

[node name="ui" type="VBoxContainer" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 5.0
margin/right = 489.0
margin/bottom = 205.0
alignment = 0

[node name="username" type="LineEdit" parent="ui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 482.0
margin/bottom = 24.0
text = "Rainforest"
placeholder/alpha = 0.6
secret = true
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="token" type="LineEdit" parent="ui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 28.0
margin/right = 482.0
margin/bottom = 52.0
text = "{bracketshate;}"
placeholder/alpha = 0.6
secret = true
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="auth" type="Button" parent="ui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 56.0
margin/right = 482.0
margin/bottom = 76.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Authenticate"
flat = false

[node name="container" type="HBoxContainer" parent="ui"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 80.0
margin/right = 482.0
margin/bottom = 94.0
alignment = 0

[node name="my_avatar" type="Label" parent="ui/container"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 127.0
margin/bottom = 14.0
text = "My GameJolt avatar:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="avatar" type="TextureFrame" parent="ui/container"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 131.0
margin/top = 0.0
margin/right = 131.0
margin/bottom = 14.0
stretch_mode = 0

[node name="open_s" type="Button" parent="ui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 80.0
margin/right = 482.0
margin/bottom = 100.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Open session"
flat = false

[node name="close_s" type="Button" parent="ui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 104.0
margin/right = 482.0
margin/bottom = 124.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Close session"
flat = false

[node name="list_trophies" type="Button" parent="ui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 128.0
margin/right = 482.0
margin/bottom = 148.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Make trophies list(if your game has any)"
flat = false

[node name="response" type="Label" parent="."]

rect/min_size = Vector2( 0, 50 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 496.0
margin/top = 5.0
margin/right = 977.0
margin/bottom = 356.0
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="comms_indicator" parent="." instance=ExtResource( 4 )]

margin/left = 6.0
margin/top = 576.0
margin/right = 46.0
margin/bottom = 616.0

[node name="Bronze" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = 235.0
margin/right = 252.0
margin/bottom = 593.0
alignment = 0

[node name="Silver" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 277.0
margin/top = 235.0
margin/right = 524.0
margin/bottom = 593.0
alignment = 0

[node name="Gold" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 545.0
margin/top = 235.0
margin/right = 792.0
margin/bottom = 593.0
alignment = 0

[connection signal="any_request_complete" from="gjapi" to="." method="_on_gjapi_any_request_complete"]

[connection signal="any_request_started" from="gjapi" to="." method="_on_gjapi_any_request_started"]

[connection signal="got_trophy_icon" from="gjapi" to="." method="_on_gjapi_got_trophy_icon"]

[connection signal="got_user_avatar" from="gjapi" to="." method="_on_gjapi_got_user_avatar"]

[connection signal="pressed" from="ui/auth" to="." method="_on_auth_pressed"]

[connection signal="pressed" from="ui/open_s" to="." method="_on_open_s_pressed"]

[connection signal="pressed" from="ui/close_s" to="." method="_on_close_s_pressed"]

[connection signal="pressed" from="ui/list_trophies" to="." method="_on_list_trophies_pressed"]


